ops/gateWay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway  
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - "draw.kushan23.com"
      tls:
        mode: SIMPLE
        credentialName: letsencrypt-prod
