ops/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
    - "draw.kushan23.com"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend
            port:
              number: 80
